Se actualiza logo en la NavBar y tag Users

--- a/dashboard-gameStack/src/views/NavBar/NavBar.module.css
+++ b/dashboard-gameStack/src/views/NavBar/NavBar.module.css
@@ -6,9 +6,13 @@
   height: 90vh;
   width: 40vh;
   padding: 16px;
-  background-color: #987bdc;
+  background-color: #622EDA;
   color: white;
   border-radius: 4px;
+}
+
+.logoGameStack{
+  width: 100%;
 }
 
 /* Estilos para el título "GameStack" */
