--- a/dashboard-gameStack/src/views/dashboardAdmin/Users/Users.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Users/Users.module.css
@@ -4,6 +4,158 @@
     display: flex;
     align-items: center; /* Centra verticalmente el contenido */
     justify-content: center; /* Centra horizontalmente el contenido */
-    color: white;
-    margin-top: -350px;
+    color: rgb(128, 124, 124);
+    margin-top: -450px;
+    margin-left: 150px;
+  
   }
+
+  .tableContainer {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px; /* Puedes ajustar el valor del padding según tus preferencias */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Agrega sombra para realzar el efecto del recuadro */
+    /* Asegúrate de que la propiedad de tamaño se ajuste automáticamente al contenido */
+    display: inline-block;
+  }
+
+  /* Estilos de la tabla */
+.userTable {
+  display: flex;
+  flex-direction: column;
+  background-color:white;
+}
+
+.title{
+padding-right: 36%;
+color: black;
+font-weight: bold;
+font-size: 25px;
+
+}
+
+.bar {
+  display: flex;
+  flex-direction: column;
+  background-color:white;
+  height: 60px;
+}
+
+.SearchBar {
+  display: flex;
+  /* flex-direction: column; */
+  background-color:white;
+  height: 30px;
+}
+
+/* Estilos de las filas */
+.userRow {
+  display: flex;
+  width: 170%;
+  height: 70%;
+}
+
+
+
+/* Estilos de las celdas */
+/* .userCell {
+  display: table-cell;
+  padding: 8px;
+  border: 1px solid #ccc;
+} */
+
+/* Estilos de los encabezados de columna */
+.userHeader {
+  display: table-cell;
+  /* padding: 8px; */
+  font-weight: bold;
+  border: 1px solid #ccc;
+}
+
+.userImage {
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
+}
+
+.userHeaderColumn1,
+.userHeaderColumn2,
+.userHeaderColumn3,
+.userHeaderColumn4,
+.userHeaderColumn5,
+.userHeaderColumn6{
+  border-top: 3px solid #ccc;
+  font-weight: bold;
+  color: black;
+}
+
+.userHeaderColumn1,
+.userColumn1 {
+  /* flex: 1; */
+  width: 30px;
+  /* vertical-align: middle; */
+  height: 30px;
+  padding: 8px; 
+
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+}
+
+.userHeaderColumn2,
+.userColumn2 {
+  /* flex: 1; */
+  width: 150px;
+  /* vertical-align: middle; */
+  height: 30px;
+  padding: 8px; 
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+}
+
+.userHeaderColumn3,
+.userColumn3 {
+  /* flex: 1; */
+  width: 350px;
+  /* vertical-align: middle; */
+  
+  padding: 8px; 
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+}
+
+.userHeaderColumn4,
+.userColumn4 {
+  /* flex: 1; */
+  width: 90px;
+  /* vertical-align: middle; */
+  
+  padding: 8px; 
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+}
+
+.userHeaderColumn5,
+.userColumn5 {
+  /* flex: 1; */
+  width: 80px;
+  /* vertical-align: middle; */
+  
+  padding: 8px; 
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+}
+
+.userHeaderColumn6,
+.userColumn6 {
+  /* flex: 1; */
+  width: 100px;
+  padding: 8px; /* Add padding for better readability */
+  /* border-top: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
+  height: 30px;
+}
+
+.NoFundMessage{
+  margin: 40px;
+  font-size: 25px;
+}
