--- a/dashboard-gameStack/src/views/dashboardAdmin/Register/Register.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Register/Register.module.css
@@ -1,9 +1,12 @@
 .register-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center; /* Centra verticalmente el contenido */
-    justify-content: center; /* Centra horizontalmente el contenido */
-    color: white;
-    margin-top: -350px;
+  width: 70%;
+  height: 100%;
+  display: flex;
+  align-items: center; /* Centra verticalmente el contenido */
+  justify-content: center; /* Centra horizontalmente el contenido */
+  color: white;
+  margin-top: -350px;
+  margin-left: 50%; /* Ajusta la cantidad de margen izquierdo para desplazar el componente hacia la derecha */
+  transform: translateX(-32%); /* Centra el componente horizontalmente después de aplicar el margen izquierdo */
+  border: solid 1px white;
   }
