--- a/dashboard-gameStack/src/views/dashboardAdmin/Login/Login.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Login/Login.module.css
@@ -24,11 +24,23 @@ h2 {
   margin-bottom: 20px;
 }
 
+.logo{
+  margin-bottom: 2rem;
+}
+
+.containerinput{
+  justify-content: center;
+  width: 250px;
+  height: 2rem;
+  margin-bottom: 1.5rem;
+}
 /* Estilos para los campos de entrada (inputs) */
 .input {
+  justify-content: center;
   width: 250px;
-  padding: 10px;
-  margin-bottom: 10px;
+  height: 2rem;
+
+
   border: 1px solid #ccc;
   border-radius: 4px;
 }
@@ -37,7 +49,7 @@ h2 {
 .loginButton {
   width: 250px;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #622EDA;
   color: white;
   border: none;
   border-radius: 4px;
@@ -46,4 +58,26 @@ h2 {
 
 .loginButton:hover {
   background-color: #0056b3;
+}
+
+.error{
+    text-align: center;
+    justify-content: center;
+    color:#ff193b ;
+    font-size: 12px;
+    margin: 0;
+
+}
+.showPasswordButton{
+  position: absolute;
+  transform: translateX(14rem) translateY(-2rem); /* Centra verticalmente el botón */
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #622EDA;
+
+
+
+  
 }
