--- a/dashboard-gameStack/src/components/Filters/Filters.module.css
+++ b/dashboard-gameStack/src/components/Filters/Filters.module.css
@@ -4,11 +4,13 @@
 }
 
 .filter-btn {
-  background-color: #4caf50;
+  background-color: #987bdc;
   color: white;
   padding: 10px;
   border: none;
   cursor: pointer;
+  border-radius: 5px; /* Ajustar el radio del borde */
+
 }
 
 .filter-menu {
