--- a/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
@@ -1,70 +1,102 @@
 .modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999; /* Agregamos un z-index alto para asegurarnos de que el modal esté por encima de todo */
-  }
-  
-  .modalContent {
-    background-color: #987bdc;
-    padding: 2rem;
-    border-radius: 1rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
-    z-index: 10000; /* Agregamos un z-index aún más alto que el del modalBackdrop */
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
 
-  .modalContent h3{
-    color: white;
-    text-align: center;
+/* Estilos para el contenido del modal */
+.modalContent {
+  background-color: #987bdc;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+  z-index: 10000;
+  width: 800px;
+  height: 600px;
+  max-width: 100%;
+}
 
-  }
-  
-  /* Estilos para los campos del formulario */
-  .modalContent form div {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 2rem; /* Espacio entre los campos */
-  }
-  
-  .modalContent label {
-    color: white; /* Color de la letra */
-    font-weight: bold; /* Texto en negrita */
-  }
-  
-  .modalContent input {
-    padding: 0.8rem;
-    border: 1px solid white; /* Borde blanco */
-    border-radius: 0.5rem;
-    background-color: transparent; /* Fondo transparente */
-    color: white; /* Color de la letra */
-  }
-  
-  /* Estilos para los botones del modal */
-  .modalButtons {
-    display: flex;
-    justify-content: center; /* Centrar los botones horizontalmente */
-    margin-top: 1rem; /* Espacio arriba de los botones */
-  }
-  
-  .modalButtons button {
-    padding: 0.8rem 2rem;
-    border: none;
-    border-radius: 0.5rem;
-    background-color: #7644a5; /* Color de fondo de los botones */
-    color: white; /* Color de la letra de los botones */
-    font-weight: bold; /* Texto en negrita */
-    cursor: pointer;
-    transition: background-color 0.3s ease; /* Transición al pasar el cursor sobre el botón */
-    margin-left: 1rem;
-    margin-bottom: 1rem; /* Separar los botones verticalmente */
-  }
-  
-  .modalButtons button:hover {
-    background-color: #603b91; /* Color de fondo al pasar el cursor */
-  }
+/* Estilos para los campos del formulario */
+.modalContent form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modalContent form div {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 30%;
+  margin-bottom: 1rem;
+}
+
+.modalContent label {
+  color: white;
+  font-weight: bold;
+}
+
+.modalContent input,
+.modalContent select,
+.modalContent input[readonly] {
+  padding: 0.8rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: white;
+  margin-bottom: 0.5rem;
+}
+
+/* Estilos para los botones del modal */
+.modalButtons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.modalButtons button {
+  padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: #7644a5;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 45%;
+}
+
+.modalButtons button:hover {
+  background-color: #603b91;
+}
+
+.successMessage {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  background-color: #603b91;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  z-index: 9999;
+}
+
+.successMessage button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+  border-radius: 5px;
+  cursor: pointer;
+}
