--- a/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
@@ -4,99 +4,85 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   z-index: 9999;
 }
 
-/* Estilos para el contenido del modal */
 .modalContent {
-  background-color: #987bdc;
+  width: 70rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
   padding: 2rem;
-  border-radius: 1rem;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
-  z-index: 10000;
-  width: 800px;
-  height: 600px;
-  max-width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos para los campos del formulario */
-.modalContent form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.modalContent form div {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 30%;
+h3 {
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
-.modalContent label {
-  color: white;
-  font-weight: bold;
+.formRow {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
-.modalContent input,
-.modalContent select,
-.modalContent input[readonly] {
-  padding: 0.8rem;
-  border: 1px solid white;
-  border-radius: 0.5rem;
-  background-color: transparent;
-  color: white;
+.formGroup {
+  flex: 1;
+}
+
+label {
+  font-size: 1rem;
+  font-weight: bold;
+  display: block;
   margin-bottom: 0.5rem;
 }
 
-/* Estilos para los botones del modal */
-.modalButtons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+input,
+select {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+}
+
+select {
+  height: 3rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
   margin-top: 1rem;
 }
 
-.modalButtons button {
-  padding: 0.8rem 2rem;
-  border: none;
-  border-radius: 0.5rem;
-  background-color: #7644a5;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 45%;
-}
-
-.modalButtons button:hover {
-  background-color: #603b91;
-}
-
 .successMessage {
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  background-color: #603b91;
-  color: white;
-  font-weight: bold;
-  border-radius: 5px;
-  z-index: 9999;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0.25rem;
+  margin-top: 1rem;
 }
 
-.successMessage button {
-  margin-left: 10px;
-  padding: 5px 10px;
-  background-color: transparent;
-  color: white;
-  border: 1px solid white;
-  border-radius: 5px;
-  cursor: pointer;
+.modalButtons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1rem;
+}
+
+.deletedButton {
+  background-color: #28a745;
+}
+.availableButton {
+  background-color: #dc3545;
 }
