--- a/dashboard-gameStack/src/views/dashboardAdmin/LoadVideogame/LoadVIdeogame.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/LoadVideogame/LoadVIdeogame.module.css
@@ -1,12 +1,115 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    width: 50%;
-    right: 10rem;
-    background-color: aliceblue;
-    margin-top: -26rem;
-    margin-left: 20rem;
-    text-align: center;
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20rem;
+  margin-top: -25rem;
+}
+
+/* Encabezado */
+h1 {
+  text-align: center;
+  color: #622eda;
+  font-size: 16px;
+  margin-bottom: 20px;
+
+}
+
+/* Campos de formulario */
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group h1 {
+  color: #987bdc;
+  margin-bottom: 5px;
+}
+
+.form-group input[type="text"],
+.form-group textarea,
+.form-group select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #3f13a4;
+  border-radius: 5px;
+  background-color: #1b063e;
+  color: #cdcdcd;
+}
+
+.form-group textarea {
+  resize: vertical;
+}
+
+.deleteImage{
+  background-color: red;
+  position: absolute;
+  margin-left: 15rem;
+top:1rem;
+  z-index:999 ;
+}
+
+/* Botón de enviar y cancelar */
+.buttonLoadGame {
+  background-color: #622eda;
+  color: #fafafa;
+  border: none;
+  border-radius: 0.2rem;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-left: 20rem;
+  margin-top: 3rem;
+}
+
+.cancel {
+  background-color: transparent;
+}
+
+
+/* Imagen seleccionada */
+.selected-image {
+  width: 100%;
+}
+
+
+/* Mensajes de validación */
+.message {
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  color: #fafafa;
+  text-align: center;
+  
+}
+
+.message.success {
+  background-color: #570606;
+  color: #fafafa;
+}
+
+.errorMessage {
+  text-align: center;
+  color:#987bdc;
+}
+
+.textarea {
+  /* Estilos para la caja de texto (textarea) */
+  width: 100%;
+  min-height: 100px;
+  resize: vertical;
+  padding: 5px;
+}
+
+.imageLoad{
+  justify-content: center;
+  margin-top: 4rem;
+  align-items: center;
+  width: 100%;
+}
+
+.imageLoaded{
+  margin-top: 2rem;
+  align-items: center;
+  width: 100%;
 }
