--- a/dashboard-gameStack/src/components/AdminBar/AdminBar.module.css
+++ b/dashboard-gameStack/src/components/AdminBar/AdminBar.module.css
@@ -1,45 +1,42 @@
+.adminBar {
+  position: absolute; /* Cambiamos a position: sticky */
+  top: 16px;
+  left: 0;
+  width: 68.5%;
+  height: 8%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  background-color: #622EDA;
+  font-weight: bold;
+  padding: 0 20px;
+  box-sizing: border-box;
+  transform: translateX(41%);
+  border-radius: 4px;
+}
 
-  .adminBar {
-    position: fixed;
-    top: 16px;
-    left: 0; /* Ajustamos a la izquierda */
-    width: 68.5%; /* Ocupa todo el ancho */
-    height: 8%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Ajustamos el espacio entre los elementos */
-    color: white;
-    background-color: #622EDA; /* Cambiamos el color de fondo */
-    font-weight: bold; /* Poner en negrita */
-    padding: 0 20px; /* Añadimos un padding para separar del borde de la pantalla */
-    box-sizing: border-box; /* Incluimos el padding dentro del tamaño total */
-    transform: translateX(41%);
-    border-radius: 4px;
-  }
-  
-  .greeting {
-    font-size: 20px; /* Aumentamos el tamaño de la fuente */
-    
-  }
-  
-  .userInfo {
-    display: flex;
-    align-items: center;
-  }
-  
-  .userIcon {
-    font-size: 24px;
-    color: white; /* Cambiamos el color del icono a blanco */
-    margin-right: 5px;
-  }
-  
-  .userName {
-    font-size: 20px; /* Aumentamos el tamaño de la fuente */
-  }
+.greeting {
+  font-size: 20px;
+}
 
+.userInfo {
+  display: flex;
+  align-items: center;
+}
 
-  .image {
-    width: 3rem;
-    border-radius: 100rem;
-    margin-left: 1rem;
-  }
+.userIcon {
+  font-size: 24px;
+  color: white;
+  margin-right: 5px;
+}
+
+.userName {
+  font-size: 20px;
+}
+
+.image {
+  width: 3rem;
+  border-radius: 100rem;
+  margin-left: 1rem;
+}
