--- a/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Games/EditGameModal.module.css
@@ -12,26 +12,37 @@
 }
 
 .modalContent {
-  width: 70rem;
-  background-color: #fff;
-  border-radius: 0.5rem;
+  width: 48rem;
+  background-color: #987bdc; /* Cambio de color de fondo */
+  border-radius: 2rem; /* Añadir el radio de 2rem */
   padding: 2rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h3 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  color: white;
+  text-align: center; /* Centrar el texto horizontalmente */
 }
 
 .formRow {
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Centrar horizontalmente los elementos dentro de la formRow */
   margin-bottom: 1.5rem;
+  color: white;
 }
 
 .formGroup {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 1rem;
 }
 
 label {
@@ -39,15 +50,20 @@ label {
   font-weight: bold;
   display: block;
   margin-bottom: 0.5rem;
+  color: white;
+  text-align: center; /* Centrar el texto horizontalmente */
 }
 
 input,
 select {
-  width: 100%;
-  padding: 0.5rem;
+  width: 15rem;
+  padding: 0.2rem; /* Cambio de tamaño de padding para los input */
   font-size: 1rem;
   border: 1px solid #ccc;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem; /* Reducir el radio de los input */
+  color: black;
+  margin: 2rem 0; /* Añadir un margen entre los elementos del formulario */
+  text-align: center;
 }
 
 select {
@@ -60,13 +76,14 @@ button {
   border: none;
   border-radius: 0.25rem;
   cursor: pointer;
-  background-color: #007bff;
+  background-color: #622EDA;
   color: #fff;
-  margin-top: 1rem;
+  margin-top: 1rem; /* Añadir un margen superior a los botones */
+  
 }
 
 .successMessage {
-  background-color: #4caf50;
+  background-color: #987bdc;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -76,13 +93,17 @@ button {
 
 .modalButtons {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-top: 1rem;
 }
 
 .deletedButton {
   background-color: #28a745;
+  margin-right: 1rem;
+
 }
+
 .availableButton {
   background-color: #dc3545;
+  margin-right: 1rem;
 }
