--- a/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
@@ -47,21 +47,22 @@
     border-bottom: 1px solid rgb(128, 124, 124);
   }
   
-  .pagination {
+  .pagination{
+    padding-top: 2%;
     /* padding-left: 36%;
-      padding-right: 36%; */
-    margin-top: 40px;
+    padding-right: 36%; */
     display: flex;
     align-items: center; /* Centra verticalmente el contenido */
     justify-content: center; /* Centra horizontalmente el contenido */
+  
   }
   
   .pagination button {
-    margin: 0 10px; /* Esto agrega 5px de margen horizontal entre los botones */
-    background-color: white;
-    border-color: white;
+    margin: 0 1px; /* Esto agrega 5px de margen horizontal entre los botones */
+    background-color: #622EDA;
+    border-color: #622EDA;
     font-weight: bold;
-  }
+    }
   .btnPaged {
     font-size: 20px;
   }
