--- a/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
@@ -1,6 +1,5 @@
 .Container {
-  background-color: white;
-  height: 100%;
+  background-color: #f0eaea;
   width: 70%;
   min-height: 40.1rem;
   display: flex;
@@ -8,13 +7,22 @@
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  margin-top: -560px;
-  margin-left: 350px;
+  margin-top: -580px;
+  margin-left: 440px;
+}
+
+.title1{
+  padding-right: 36% !important;
+color: black !important;
+font-weight: bold !important;
+font-size: 25px !important;
 }
 
 .Container h1 {
-  font-size: 20px;
+  font-size: 16px;
   color: black;
+  font-weight: bold;
+
 }
 .userImage {
   width: 30px;
@@ -59,10 +67,10 @@
 }
 
 .pagination button {
-  margin: 0 1px; /* Esto agrega 5px de margen horizontal entre los botones */
-  background-color: black;
-  border-color: black;
-  font-weight: bold;
+  margin: 0 10px; /* Esto agrega 5px de margen horizontal entre los botones */
+  background-color: #622EDA;
+  border-color: #622EDA;
+  font-weight: bold
 }
 .btnPaged {
   font-size: 20px;
