--- a/dashboard-gameStack/src/views/dashboardAdmin/Profile/Profile.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Profile/Profile.module.css
@@ -1,3 +1,101 @@
 .profile-container {
-
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 100%;
+  align-items: center; /* Centra verticalmente el contenido */
+  justify-content: center; /* Centra horizontalmente el contenido */
+  color: white;
+  margin-top: -570px;
+  margin-left: 50%; /* Ajusta la cantidad de margen izquierdo para desplazar el componente hacia la derecha */
+  transform: translateX(-32%);
+   /* Centra el componente horizontalmente después de aplicar el margen izquierdo */
+  /* border: solid 1px white; */
   }
+
+  /* Estilos para el formulario */
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 120px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #fff;
+  /* margin-top: 70px; */
+  height: 100%;
+}
+
+.inputContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+/* Estilos para los campos de entrada (inputs) */
+
+.input{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: center;
+  padding-left: 30px
+}
+
+.miniButton{
+  padding: 10px;
+  margin: 32;
+  height: 42;
+  width: 100%;
+  background-color: #6B35E8;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.miniButton:hover {
+  background-color: #0056b3;
+}
+
+.error{
+  text-align: center;
+  font-size: 14;
+  color: #ff193b;
+  font-weight: bold;
+}
+.buttonText{
+  text-align: center;
+  padding: 10;
+  font-size: 16;
+  font-weight: bold;
+  color: #FAFAFA;
+}
+
+.inputWithIcon {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.editIcon { 
+  margin-left: -30px; /* Alinea el ícono a la izquierda del campo de entrada */
+  margin-right: 5px; /* Añade margen derecho para separar el ícono del texto */
+  color: #3F16A7;
+  cursor: pointer;
+}
+
+.image{
+  border-radius: 100;
+  width: 200;
+  height: 200;
+}
+.crossIcon{
+  color: #595959;
+  position: absolute;
+  right: 10px;
+  top: 60%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
