--- a/dashboard-gameStack/src/views/dashboardAdmin/Users/ViewDataUserModal.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Users/ViewDataUserModal.module.css
@@ -1,109 +1,113 @@
 .modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  
-  .modalContent {
-    width: 48rem;
-    background-color: #987bdc; /* Cambio de color de fondo */
-    border-radius: 2rem; /* Añadir el radio de 2rem */
-    padding: 2rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  h3 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    color: white;
-    text-align: center; /* Centrar el texto horizontalmente */
-  }
-  
-  .formRow {
-    display: flex;
-    justify-content: center; /* Centrar horizontalmente los elementos dentro de la formRow */
-    margin-bottom: 1.5rem;
-    color: white;
-  }
-  
-  .formGroup {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 1rem;
-  }
-  
-  label {
-    font-size: 1rem;
-    font-weight: bold;
-    display: block;
-    margin-bottom: 0.5rem;
-    color: white;
-    text-align: center; /* Centrar el texto horizontalmente */
-  }
-  
-  input,
-  select {
-    width: 15rem;
-    padding: 0.2rem; /* Cambio de tamaño de padding para los input */
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 0.5rem; /* Reducir el radio de los input */
-    color: black;
-    margin: 2rem 0; /* Añadir un margen entre los elementos del formulario */
-    text-align: center;
-  }
-  
-  select {
-    height: 3rem;
-  }
-  
-  button {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 0.25rem;
-    cursor: pointer;
-    background-color: #622EDA;
-    color: #fff;
-    margin-top: 1rem; /* Añadir un margen superior a los botones */
-    
-  }
-  
-  .successMessage {
-    background-color: #987bdc;
-    color: #fff;
-    padding: 1rem;
-    text-align: center;
-    border-radius: 0.25rem;
-    margin-top: 1rem;
-  }
-  
-  .modalButtons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
-  }
-  
-  .deletedButton {
-    background-color: #28a745;
-    margin-right: 1rem;
-  
-  }
-  
-  .availableButton {
-    background-color: #dc3545;
-    margin-right: 1rem;
-  }
+  position: absolute;
+  top: 406px;
+  left: 63%;
+  transform: translate(-50%, -50%);
+  width: 650px;
+  display: flex;
+  box-shadow: 0 1px 20px 0 rgba(69, 90, 100, .08);
+}
+
+.modalBackdrop .modalContent {
+  width: 35%;
+  background: linear-gradient(to right, #1B063E, #622EDA);
+  padding: 30px 25px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  text-align: center;
+  color: #fff;
+}
+
+.modalBackdrop .modalContent img {
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.modalBackdrop .modalContent h4 {
+  margin-bottom: 10px;
+}
+
+.wrapper .modalContent p {
+  font-size: 12px;
+}
+
+.modalBackdrop .right {
+  width: 65%;
+  background: #fff;
+  padding: 30px 25px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.modalBackdrop .right .info,
+.modalBackdrop .right .projects {
+  margin-bottom: 25px;
+}
+
+.modalBackdrop .right .info h3,
+.modalBackdrop .right .projects h3 {
+  margin-bottom: 15px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #e0e0e0;
+  color: #353c4e;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.modalBackdrop .right .info_data,
+.modalBackdrop .right .projects_data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modalBackdrop .right .info_data .data,
+.modalBackdrop .right .projects_data .data {
+  width: 45%;
+}
+
+.modalBackdrop .right .info_data .data h4,
+.modalBackdrop .right .projects_data .data h4 {
+  color: #353c4e;
+  margin-bottom: 5px;
+}
+
+.modalBackdrop .right .info_data .data p,
+.modalBackdrop .right .projects_data .data p {
+  font-size: 13px;
+  margin-bottom: 10px;
+  color: #919aa3;
+}
+
+.closeButton {
+  background-color: #01a9ac;
+  margin-top: 50%;
+}
+
+.userBirthday {
+  margin-top: -21px;
+}
+
+
+
+.crossIcon{
+  color: #ff193b;
+  margin-right: 5px;
+}
+
+.crossIconAllow{
+  color: #00D37B;
+  margin-right: 5px;
+}
+
+.editIcon{
+  color: #1B063E;
+  margin-left: 6px;
+}
+
+.red{
+  color: red;
+}
+
+.green{
+  color: #00D37B;
+}
