cerrando los 3 diagramas con stilos y loading

--- a/dashboard-gameStack/src/views/dashboardAdmin/Metrics/BestSeller/GraphBestSeller.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Metrics/BestSeller/GraphBestSeller.module.css
@@ -1,22 +1,36 @@
 .myContainer {
-    width: 100%;
-    margin: 0 auto;
-    overflow-x: auto;
-  }
+  width: 100%;
+  display: flex; /* Activa el modelo de caja flexible */
+  flex-direction: column; /* Cambia la dirección del eje principal a vertical */
+  align-items: center; /* Centra los elementos horizontalmente */
+  justify-content: center; /* Centra los elementos verticalmente */
+  overflow-x: auto;
+}
   
-  
+  .chartContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    padding: 20px;
+     margin-top: -50px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width:90%;
+}
   .inputs_Filtro {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: 90%;
-    margin: 0 auto;
+    width: 50%;
+    margin-bottom: 56px;
     background-color: #6B35E8;
     padding: 10px;
     height: 50px;
     border-radius: 8px;
-    height: 35px;
+    
   }
   .input {
     display: flex;
@@ -58,8 +72,8 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    height: 45px;
-    width: 45px;
+    height: 55px;
+    width: 55px;
     display: flex;
     /* Agregado */
     justify-content: center;
@@ -85,8 +99,8 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    height: 45px;
-    width: 45px;
+    height: 55px;
+    width: 55px;
     display: flex;
     /* Agregado */
     justify-content: center;
@@ -95,3 +109,16 @@
     /* Centrado vertical */
     text-align: center;
   }
+
+  
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px; /* Ajusta la altura según tus necesidades */
+}
+
+.loadingContainer img {
+  width: 250px; /* Ajusta el ancho de la imagen según tus necesidades */
+  border-radius: 10px;
+}
