--- a/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
@@ -8,9 +8,12 @@
   justify-content: center;
   border-radius: 15px;
   margin-top: -580px;
-  margin-left: 440px;
+  margin-left: 370px;
 }
-
+.NoFundMessage{
+  margin: 40px;
+  font-size: 25px;
+  }
 .title1{
   padding-right: 36% !important;
 color: black !important;
