--- a/dashboard-gameStack/src/views/dashboardAdmin/Login/Login.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Login/Login.module.css
@@ -28,11 +28,18 @@ h2 {
   margin-bottom: 2rem;
 }
 
+
 .containerinput{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-items: center;
   justify-content: center;
+  margin-bottom: 1.5rem;
   width: 250px;
   height: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
+  
 }
 /* Estilos para los campos de entrada (inputs) */
 .input {
@@ -65,12 +72,12 @@ h2 {
     justify-content: center;
     color:#ff193b ;
     font-size: 12px;
-    margin: 0;
+    margin-top: -1rem;
 
 }
 .showPasswordButton{
   position: absolute;
-  transform: translateX(14rem) translateY(-2rem); /* Centra verticalmente el botón */
+  transform: translateX(6.5rem)  translateY(-0.3rem);
   background-color: transparent;
   border: none;
   font-size: 1.5rem;
