--- a/dashboard-gameStack/src/views/dashboardAdmin/Profile/Profile.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Profile/Profile.module.css
@@ -35,16 +35,16 @@
     align-items: center;
     margin-left: auto;
     width: 40%;
+    margin-left: 1rem;
   }
   
   .imageLoaded{
-  
     margin-top: auto;
     border-radius: 100%;
     width: 200px;
     height: 200px;
-    object-fit: cover
-    
+    object-fit: cover;
+    margin-left: 4rem;
   }
 
   /* Estilos para el formulario */
@@ -77,6 +77,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin-top: 1.5rem;
 }
 /* Estilos para los campos de entrada (inputs) */
 
@@ -90,6 +91,7 @@
   text-align: center;
   padding-left: 30px;
   color: #622EDA;
+  
 }
 
 .miniButton{
@@ -101,6 +103,7 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 1rem;
 }
 
 .miniButton:hover {
