--- a/dashboard-gameStack/src/views/dashboardAdmin/Metrics/Metricstab.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Metrics/Metricstab.module.css
@@ -6,6 +6,7 @@
     flex-direction: row;
 
 
+
   }
 
   .tabs_container {
@@ -13,7 +14,7 @@
     /* max-width: 500px; */
     margin: 20px;
     padding: 20px;
-    border: 2px solid #987bdc;
+    background: linear-gradient(to right, #1b063e, #622eda);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Efecto de sombra tridimensional */
     border-radius: 8px; /* Bordes más redondeados */
     /* background-color: aqua; */
@@ -22,7 +23,7 @@
   .tabs {
     display: flex;
     border-bottom: 2px solid #987bdc; /* Línea más gruesa en la parte inferior */
-    background-color: white;
+    background: linear-gradient(to right, #1b063e, #622eda);
     align-items: center;
     justify-content: space-around;
     color: #987bdc;
