--- a/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/Sales/Sales.module.css
@@ -1,31 +1,39 @@
 .Container {
   background-color: #f0eaea;
-  width: 70%;
   min-height: 40.1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  margin-top: -580px;
-  margin-left: 370px;
+
+  width: 70%;
+  height: 35rem;
+  align-items: center; /* Centra verticalmente el contenido */
+  justify-content: center; /* Centra horizontalmente el contenido */
+  color: white;
+  margin-top: -680px;
+  margin-left: 50%; /* Ajusta la cantidad de margen izquierdo para desplazar el componente hacia la derecha */
+  transform: translateX(-32%);
+  border: 1px solid #622eda;
+  border-radius: 10px;
 }
-.NoFundMessage{
+
+.NoFundMessage {
   margin: 40px;
   font-size: 25px;
-  }
-.title1{
+}
+.title1 {
   padding-right: 36% !important;
-color: black !important;
-font-weight: bold !important;
-font-size: 25px !important;
+  color: black !important;
+  font-weight: bold !important;
+  font-size: 25px !important;
 }
 
 .Container h1 {
   font-size: 16px;
   color: black;
   font-weight: bold;
-
 }
 .userImage {
   width: 30px;
@@ -71,9 +79,9 @@ font-size: 25px !important;
 
 .pagination button {
   margin: 0 10px; /* Esto agrega 5px de margen horizontal entre los botones */
-  background-color: #622EDA;
-  border-color: #622EDA;
-  font-weight: bold
+  background-color: #622eda;
+  border-color: #622eda;
+  font-weight: bold;
 }
 .btnPaged {
   font-size: 20px;
